   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.64
 ============

 Released on 

 New features and improvements:

   - 

 Bug fixes:

   - 

 Other changes:

   - myIWindow: set_settings() is renamed set_geometry_settings() (todo #1282).
   - No more try to read/write user settings from myIWindow geometry settings (todo #1284).

-----------------------------------------------------------------------
 Version 0.63
 ============

 Released on 2016-12-17

 New features and improvements:

   - Introduce extension API v2.
   - %BALCR, %BALDB: new formula engine macros.
   - ofaApplication: improve message when command-line arguments are invalid.
   - ofaMiscAuditUI: takes advantage of ofaITVColumnable interface.
   - ofaMiscCollector: remove double frame on each pages (todo #1251).
   - ofaRecPeriodProperties: add missing margins (todo #1249).
   - ofaRecurrentModel: page opens with all rows selected (todo #1280).
   - ofaRecurrentRun: page opens with all rows selected (todo #1281).
   - ofaTVARecordPage: do not allow to generate operations twice (todo #1294).
   - ofaTVARecordPage: have a 'Validate' button for the current selection (todo #1295).
   - ofaTVARecordProperties: remove double correspondence frame.
   - ofaTVARecordProperties: review the validation dynamics (todo #1253).
   - ofaTVARecordStore: complete column content (todo #1247).
   - ofaTVARecordTreeview: rename column header (todo #1247).
   - UI: review dialog boxes layout (todo #1184).

 Bug fixes:

   - my_date_set_from_str(): fix parsing when input string is NULL.
   - ofaAccountProperties: fix error message when identifier is empty (todo #1256).
   - ofaCheckBalancesBin: does not increment account balances when amounts are nul (todo #1259).
   - ofaHub: finalized on application quit, and plugins are successfully shutdowned (todo #1290).