@@ -74,6 +74,7 @@ typedef struct {
 
 	/* runtime
 	 */
+	gchar               *settings_prefix;
 	ofaHub              *hub;
 	ofaIDBDossierMeta   *meta;
 
@@ -225,7 +226,7 @@ static const ofsIAssistant st_pages_cb [] = {
 };
 
 static void
-export_finalize( GObject *instance )
+export_assistant_finalize( GObject *instance )
 {
 	static const gchar *thisfn = "ofa_export_assistant_finalize";
 	ofaExportAssistantPrivate *priv;
@@ -238,6 +239,7 @@ export_finalize( GObject *instance )
 	/* free data members here */
 	priv = ofa_export_assistant_get_instance_private( OFA_EXPORT_ASSISTANT( instance ));
 
+	g_free( priv->settings_prefix );
 	g_free( priv->p1_selected_class );
 	g_free( priv->p1_selected_label );
 	g_free( priv->p2_format );
@@ -249,7 +251,7 @@ export_finalize( GObject *instance )
 }
 
 static void
-export_dispose( GObject *instance )
+export_assistant_dispose( GObject *instance )
 {
 	ofaExportAssistantPrivate *priv;
 
@@ -289,7 +291,7 @@ ofa_export_assistant_init( ofaExportAssistant *self )
 	priv = ofa_export_assistant_get_instance_private( self );
 
 	priv->dispose_has_run = FALSE;
-
+	priv->settings_prefix = g_strdup( G_OBJECT_TYPE_NAME( self ));
 	priv->p1_exportables = NULL;
 	priv->p2_export_settings = NULL;
 
@@ -303,8 +305,8 @@ ofa_export_assistant_class_init( ofaExportAssistantClass *klass )
 
 	g_debug( "%s: klass=%p", thisfn, ( void * ) klass );
 
-	G_OBJECT_CLASS( klass )->dispose = export_dispose;
-	G_OBJECT_CLASS( klass )->finalize = export_finalize;
+	G_OBJECT_CLASS( klass )->dispose = export_assistant_dispose;
+	G_OBJECT_CLASS( klass )->finalize = export_assistant_finalize;
 
 	gtk_widget_class_set_template_from_resource( GTK_WIDGET_CLASS( klass ), st_resource_ui );
 }
@@ -1041,15 +1043,15 @@ read_settings( ofaExportAssistant *self )
 	GList *strlist, *it;
 	const gchar *cstr;
 	myISettings *settings;
-	gchar *keyname, *group;
+	gchar *key, *group;
 
 	priv = ofa_export_assistant_get_instance_private( self );
 
 	/* user settings
 	 */
 	settings = ofa_hub_get_user_settings( priv->hub );
-	keyname = my_iwindow_get_keyname( MY_IWINDOW( self ));
-	strlist = my_isettings_get_string_list( settings, HUB_USER_SETTINGS_GROUP, keyname );
+	key = g_strdup_printf( "%s-settings", priv->settings_prefix );
+	strlist = my_isettings_get_string_list( settings, HUB_USER_SETTINGS_GROUP, key );
 
 	it = strlist;
 	cstr = it ? ( const gchar * ) it->data : NULL;
@@ -1058,7 +1060,7 @@ read_settings( ofaExportAssistant *self )
 	}
 
 	my_isettings_free_string_list( settings, strlist );
-	g_free( keyname );
+	g_free( key );
 
 	/* dossier settings
 	 */
@@ -1075,7 +1077,7 @@ write_settings( ofaExportAssistant *self )
 {
 	ofaExportAssistantPrivate *priv;
 	myISettings *settings;
-	gchar *keyname, *str, *group;
+	gchar *key, *str, *group;
 
 	priv = ofa_export_assistant_get_instance_private( self );
 
@@ -1085,11 +1087,11 @@ write_settings( ofaExportAssistant *self )
 			priv->p1_selected_class ? priv->p1_selected_class : "" );
 
 	settings = ofa_hub_get_user_settings( priv->hub );
-	keyname = my_iwindow_get_keyname( MY_IWINDOW( self ));
-	my_isettings_set_string( settings, HUB_USER_SETTINGS_GROUP, keyname, str );
+	key = g_strdup_printf( "%s-settings", priv->settings_prefix );
+	my_isettings_set_string( settings, HUB_USER_SETTINGS_GROUP, key, str );
 
 	g_free( str );
-	g_free( keyname );
+	g_free( key );
 
 	/* dossier settings
 	 */
