@@ -51,6 +51,7 @@
  Other changes:
 
    - myIWindow: set_settings() is renamed set_geometry_settings() (todo #1282).
+   - myIWindow: deprecate my_iwindow_get_keyname() (todo #1283).
    - No more try to read/write user settings from myIWindow geometry settings (todo #1284).
 
 -----------------------------------------------------------------------
